<resources>
    <string name="app_name">Chiri</string>
    <string name="direction_api_key" translatable="false">AIzaSyCSFfSiCzJw-r4kbPIwvg-rtSkUdipiZzc</string>
    <string name="places_api_key" translatable="false">AIzaSyCSFfSiCzJw-r4kbPIwvg-rtSkUdipiZzc</string>
    <string name="google_map_key" translatable="false">AIzaSyCSFfSiCzJw-r4kbPIwvg-rtSkUdipiZzc</string>
    <string name="google_client_id" translatable="false">70108100937-h18p8bee304h539fqvnfdq2oqtra687a.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">475486880355551</string>
    <string name="select_pickup">Select pickup</string>
    <string name="cancel">Cancel</string>
    <string name="language_ar">عربى</string>
    <string name="language_en">English</string>
    <string name="confirm_pickup">Confirm</string>
    <string name="get_started">Get Started</string>
    <string name="any_more_address_detail">Any More Address Detail?</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="select_language">Select language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="confirm_dropoff">Confirm Dropoff</string>
    <string name="select_dropoff_location">New Delivery</string>
    <string name="add_dropoff_location">Add Dropoff Location</string>
    <string name="delivery">Delivery</string>
    <string name="add_dropoff">Add Dropoff</string>
    <string name="started">Started</string>
    <string name="proceed">Proceed</string>
    <string name="enter_your_promo_code">Enter your Promo Code</string>
    <string name="total_payment">Total Payment</string>
    <string name="discount">Discount</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="items_name">Items name</string>
    <string name="item_details">Item Details</string>
    <string name="additional_details">Additional Details</string>
    <string name="types_of_goods">Types of goods</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="receiver">Receiver</string>
    <string name="sender">Sender</string>
    <string name="apartment_building_name">Apartment #, Building Name</string>
    <string name="apply">Apply</string>
    <string name="select_country">Select Country</string>
    <string name="order_history">Order History</string>
    <string name="pending">Pending</string>
    <string name="phone_num">Phone Number</string>
    <string name="done">DONE</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="cant_empty">Can\'t empty !</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="are_you_sure_to_cancel_order">Are you sure to want to cancel order ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="payment_methods">Payment methods</string>
    <string name="delete_card">Delete card</string>
    <string name="deleted_successfully">Deleted Successfully !</string>
    <string name="select_the_card_validity">Select the Card valid expiry date</string>
    <string name="add_card">Add card</string>
    <string name="card_name">Name on card</string>
    <string name="mm_yy">MM/YYYY</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="your_order_has_been_delivered">Your order has been delivered</string>
    <string name="on_the_way_to_dropoff_location">On the way to dropoff location</string>
    <string name="rider_is_going_to_dropoff_location">Rider is going to dropoff location</string>
    <string name="order_picked">Order Picked</string>
    <string name="your_order_has_been_picked_up">Your order has been picked up</string>
    <string name="on_the_way_to_pickup_location">On the way to pickup location</string>
    <string name="rider_is_going_to_pickup_your_order">Rider is going to pickup your order</string>
    <string name="order_created">Order Created</string>
    <string name="your_order_has_been_placed">Your order has been placed</string>
    <string name="jhon_email_com">Jhon@email.com</string>
    <string name="select_date">Select Date</string>
    <string name="select_pickup_date_time"><![CDATA[Select pickup date & time]]></string>
    <string name="no_order_found">No Order Found</string>
    <string name="required_first_name">First name is required !</string>
    <string name="required_last_name">Last name is required !</string>
    <string name="required_email">Email is required !</string>
    <string name="invalid_email">Invalid Email !</string>
    <string name="required_country">Country is required !</string>
    <string name="required_password">Password is required !</string>
    <string name="invalid_password">Password must be 6 digit !</string>
    <string name="skip">Skip</string>
    <string name="invalid_code">Invalid Promo code</string>
    <string name="parcel_is_an_on_demand_parcel_delivery_service">Chiri is an on demand parcel\ndelivery service.</string>
    <string name="login">Log in</string>
    <string name="welcome_back">Welcome, </string>
    <string name="whats_your_email">What\'s your email ? </string>
    <string name="signin_to_continue">Sign in to continue</string>
    <string name="signup_to_continue">Signup to continue</string>
    <string name="email">Email</string>
    <string name="password">Choose a Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="connect_with_google"> Connect with Google </string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="forgot_password_description">Enter the email address you signed up with\nWe\'ll send you an email that will let you\nchoose another password.</string>
    <string name="jhonalexmail">Your Email</string>
    <string name="dummy_password">********</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="your_email">Your Email</string>
    <string name="what_is_your_phone_number">What is your phone number</string>
    <string name="please_confirm_your_country_code_and_enter_your_phone_number">Please confirm your country code and\nenter your phone number</string>
    <string name="country_code">Country Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="dummy_number">00123456789</string>
    <string name="str_continue">Confirm</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="check_your_sms_message_we_ve"></string>
    <string name="check_your_sms_message_we_have">Sent to +923210000001</string>
    <string name="check_your_email_message_we_have">Check your email we\'ve sent you verification code at</string>
    <string name="verify_code">Verify Code</string>
    <string name="signup">Signup</string>
    <string name="str_register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="jhon">Jhon</string>
    <string name="alex">Alex</string>
    <string name="country_of_residence">Country of residence</string>
    <string name="london">london</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_your_password">Change your password</string>
    <string name="password_must_match">Confirm password must be match</string>
    <string name="verify_email">Verify email</string>
    <string name="plus_92">+92</string>
    <string name="when_your_birthday">When\'s your birthday?</string>
    <string name="your_birthday_show_publically">Your birthday won\'t be shown publicly.</string>
    <string name="invalid_phone_no">Invalid phone number</string>
    <string name="user_name">User Name</string>
    <string name="str_login">Log In</string>
    <string name="no_vehicle_found">No vehicle found</string>
    <string name="okay">Ok</string>
    <string name="you_select_past_time_send">You can\'t select past time. Your pickup time should be start after one hour of order created time.</string>
    <string name="please_select_pickup_date">Please select Pickup date or time first !</string>
    <string name="no_payment_method_found">No payment method found</string>
    <string name="security_code">Security Code</string>
    <string name="card_cvv">CVV</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_Number">Card Number</string>
    <string name="expiration">Expiration</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dummy_date">12 Dec 1920</string>
    <string name="username">Username</string>
    <string name="dummy_user_name">Alex 123</string>
    <string name="required_username">User name is required !</string>
    <string name="required_dob">Date of birth is required !</string>
    <string name="select">Select</string>
    <string name="birthday">Birthday</string>
    <string name="update_password">Update Password</string>
    <string name="str_search">Search</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_detail">Delivery Details</string>
    <string name="dummy_item_name">Food, grocery, parcel delivery etc</string>
    <string name="dummy_item_description">Tell us what you are sending or share specific\ninstructions to the courier. (Optional)</string>
    <string name="maximum_character">Maximum Character</string>
    <string name="dummy_maximum_character">Maximum Character: 0/150</string>
    <string name="current_order">Current Order</string>
    <string name="past_order">Past Order</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="track_order">Track Order</string>
    <string name="type_your_message_here">Write a message</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="tap_again">Tap Again To Exit</string>
    <string name="camera_denied">camera permission denied</string>
    <string name="rider_has_no_number">Rider has not register any phone number !</string>
    <string name="promo_code">Promo Code</string>
    <string name="i_understand_and_want_to_cancel_order">I understand and want to cancel order</string>
    <string name="cancel_order_title">Cancel Order ?</string>
    <string name="required_check_tick_for_verification">Required to check tick for verification</string>
    <string name="next">Next</string>
    <string name="total_payment_must_be_non_zero">Total payment must be non-zero</string>
    <string name="total_distence_must_be_non_zero">Total distence must be non-zero</string>
    <string name="date">Date</string>
    <string name="your_message">Your Message</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="tap_again_to_exit">Tap Again To Exit</string>
    <string name="your_age_must_be_fifteen">Your age must be greater then 15 year</string>
    <string name="edit_phone_num">Edit Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="send_code">Send Code</string>
</resources>