<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_phone_no_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newColorBackground"
    android:clickable="true"
    tools:context="chiri.ActivitiesFragments.EditProfile.EditPhoneNoF">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_58sdp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:src="@drawable/ic_back_arrow"
            android:tint="@color/newColorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:fontFamily="@font/clan_ot_narrowmedium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/edit_phone_num"
            android:textColor="@color/newColorBlack"
            android:textSize="@dimen/_11ssp"
            android:textStyle="normal" />


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_62sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/clan_ot_narrowmedium"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/enter_phone_number"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/clan_ot_narrowmedium"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="@dimen/_4sdp"
                    android:text="@string/please_confirm_your_country_code_and_enter_your_phone_number"
                    android:textColor="@color/newColorLightHint"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:background="@drawable/d_bottom_et_gray_line"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/clan_ot_narrowmedium"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/country_code"
                        android:textColor="@color/newColorDarkHint"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="normal" />

                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/et_country_code"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_28sdp"
                        android:background="@null"
                        android:focusable="false"
                        android:fontFamily="@font/clan_ot_narrownews"
                        android:gravity="center_vertical"
                        android:hint="@string/plus_92"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="phone"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text=""
                        android:textAlignment="viewStart"
                        android:textColor="@color/newColorBlack"
                        android:textColorHint="@color/newColorLightHint"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="normal"
                        tools:ignore="RtlCompat" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7.0"
                    android:background="@drawable/d_bottom_et_gray_line"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/clan_ot_narrowmedium"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/mobile_number"
                        android:textColor="@color/newColorDarkHint"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/et_phoneno"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_28sdp"
                        android:background="@null"
                        android:fontFamily="@font/clan_ot_narrownews"
                        android:gravity="center_vertical"
                        android:hint="@string/dummy_number"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="phone"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text=""
                        android:textAlignment="viewStart"
                        android:textColor="@color/newColorBlack"
                        android:textColorHint="@color/newColorLightHint"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="normal"
                        tools:ignore="RtlCompat" />


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp">

        <LinearLayout
            android:id="@+id/edit_send_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/ractengle_less_round_solid_primary"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/clan_ot_narrowmedium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/send_code"
                android:textAllCaps="false"
                android:textColor="@color/newColorWhite"
                android:textSize="@dimen/_11ssp"
                android:textStyle="normal" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>