<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/newColorBackground"
        android:clickable="true">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_58sdp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:src="@drawable/ic_back_arrow"
                android:tint="@color/newColorBlack" />

            <TextView
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:fontFamily="@font/clan_ot_narrowmedium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/phone_num"
                android:textColor="@color/newColorBlack"
                android:textSize="@dimen/_11ssp"
                android:textStyle="normal" />


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_bold"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="What's your number?"
                        android:textColor="@color/dark"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/gilroy_light"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:lineSpacingExtra="@dimen/_4sdp"
                        android:text="We'll text a code to verify your phone"
                        android:textColor="@color/newColorLightHint"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="normal" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_32sdp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:background="@drawable/d_bottom_et_gray_line"
                        android:orientation="vertical">

                        <TextView
                            android:visibility="gone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/clan_ot_narrowmedium"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:text="@string/country_code"
                            android:textColor="@color/newColorDarkHint"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="normal" />

                        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                            android:layout_marginTop="5dp"
                            android:id="@+id/ccp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            app:ccp_hidePhoneCode="true"
                            android:visibility="visible" />

                        <EditText
                            android:visibility="gone"
                            android:id="@+id/et_country_code"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_28sdp"
                            android:layout_marginTop="5dp"
                            android:background="@null"
                            android:focusable="false"
                            android:fontFamily="@font/clan_ot_narrownews"
                            android:gravity="center_vertical"
                            android:hint="@string/plus_92"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="phone"
                            android:paddingTop="@dimen/_2sdp"
                            android:paddingBottom="@dimen/_2sdp"
                            android:text=""
                            android:textAlignment="viewStart"
                            android:textColor="@color/newColorBlack"
                            android:textColorHint="@color/newColorLightHint"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="normal"
                            tools:ignore="RtlCompat" />

                    </LinearLayout>

                    <!--                <View
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="0.5" />-->

                    <LinearLayout
                        android:paddingBottom="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7.0"
                        android:background="@drawable/d_bottom_et_gray_line"
                        android:orientation="vertical">

                        <TextView
                            android:visibility="gone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/clan_ot_narrowmedium"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:text="@string/mobile_number"
                            android:textColor="@color/newColorDarkHint"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="normal" />

                        <EditText
                            android:id="@+id/et_phoneno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@null"
                            android:fontFamily="@font/clan_ot_narrownews"
                            android:gravity="center_vertical"
                            android:hint="@string/dummy_number"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="phone"
                            android:paddingTop="@dimen/_2sdp"
                            android:paddingBottom="@dimen/_2sdp"
                            android:text=""
                            android:textAlignment="viewStart"
                            android:textColor="@color/newColorBlack"
                            android:textColorHint="@color/newColorLightHint"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="normal"
                            tools:ignore="RtlCompat" />


                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:fontFamily="@font/gilroy_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Changed your phone number ?"
                    android:textColor="@color/newColorPrimary"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:textSize="18dp" />


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/register_no_continue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/ractengle_less_round_solid_primary"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/str_continue"
                    android:textAllCaps="false"
                    android:textColor="@color/newColorWhite"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="normal" />


            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
</layout>